# eventgate

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN_E_TASK_0B_FINDINGS.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  fly.prod.toml  fly.redis-prod.toml  fly.redis-staging.toml  fly.toml  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  authentication.py  managers.py  models.py  serializers.py  (+4 more)
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/scripts/: provision-redis.sh
backend/tests/: test_accounts_models.py  test_analytics_metric_model.py  test_analytics_metric_service.py  test_audit_append_only.py  test_audit_list_endpoint.py  test_audit_model.py  test_auth_endpoints.py  test_celery_beat_schedule.py  test_checkin_concurrency.py  test_checkin_conflict_audit.py  test_checkin_happy.py  test_checkin_idempotent.py  test_common_orgscoped.py  test_common_tokens.py  test_cookie_jwt_auth.py  test_csv_commit.py  test_csv_import_model.py  test_csv_import_status.py  test_csv_import_task.py  test_csv_preview.py  test_dev_login.py  test_device_auth.py  test_devices_enroll_rate_limit.py  test_devices_enrollment.py  test_devices_models.py  test_devices_pin_unlock.py  test_devices_services.py  test_event_banner.py  test_event_edit.py  test_event_list_filters.py  test_event_live_endpoint.py  test_event_live_publish.py  test_event_live_snapshot.py  test_event_pin.py  test_event_slug_alias_model.py  test_event_stats_endpoint.py  test_events_endpoints.py  test_events_models.py  test_events_transitions.py  test_google_form_bridge_admin_api.py  (+51 more)
(+498 files in other folders)
