[project]
name = "eventgate-backend"
version = "0.1.0"
description = "Eventgate — fast, paperless event entrance for Southeast Asia"
requires-python = ">=3.12,<3.13"
dependencies = [
  "django>=5.0,<5.2",
  "djangorestframework>=3.15,<3.16",
  "drf-spectacular>=0.27,<0.28",
  "django-environ>=0.11,<0.12",
  "psycopg[binary]>=3.2,<3.3",
  "redis>=5.0,<6.0",
  "celery>=5.4,<5.5",
  "sentry-sdk>=2.10,<3.0",
  "gunicorn>=22.0,<23.0",
  "uvicorn[standard]>=0.30,<0.31",
  "whitenoise>=6.7,<7.0",
  "django-cors-headers>=4.4,<5.0",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "python-slugify>=8.0,<9.0",
  "bcrypt>=4.2,<5.0",
  "segno>=1.6,<2.0",
  "django-anymail[resend]>=11.0,<12.0",
  "django-storages[s3]>=1.14,<2.0",
  "pillow>=10.0,<12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<0.7",
  "mypy>=1.11,<2.0",
  "django-stubs[compatible-mypy]>=5.0,<6.0",
  "pre-commit>=3.8,<4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "DJ", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["mypy_django_plugin.main"]
disable_error_code = ["import-untyped"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"
